css/main.css
.dark {
  background-color: #36394B!important;
}

.really-dark {
  background-color: #040620!important;
}

.logo-grey {
  color: #c3c4c6;
}

.logo-orange {
  color: #fcbe85;
}

.caption {
  font-size: 1.25rem;
  font-weight: 300;
  margin-bottom: 30px;
}

.code-snippet {
  font-size: 1.15rem;
  background-color: #f7f7f7;
  padding: 16px;
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

.banner-background {
  background: linear-gradient(135deg, hsl(29, 32%, 41%), hsla(236, 78%, 7%, 1));
  position: relative;
}

.banner-background h3 {
  margin-top: 75px;
}

.banner-background .subtitle {
  font-size: 1.5em;
  color: #a6a6a6;
}

.banner-background p {
  font-size: 1.1em;
  color: #a6a6a6;
}

.feature-title {
  font-size: 1.5rem;
}

img.overview {
  margin: auto;
}

.banner-background .h5 {
  color: #c3c4c6;
}

.btn {
  background-color: #fcbe85;
  color: #444;
  margin-bottom: 25px;
}

.btn:focus {
  background-color: #fdd8b4;
}

.btn:hover {
  background-color: #fdd8b4;
}

.btn-large {
  background-color: #fcbe85;
  color: #444;
}

.btn-large:focus {
  background-color: #fdd8b4;
}

.btn-large:hover {
  background-color: #fdd8b4;
}

.page-footer {
  padding-top: 0!important;
}

.brand-logo {
  background: url(./deepforge-logo.png) no-repeat 10px 12px;
  background-size: 75%;
  margin-left: 15px;
  height: 60px;
  width: 200px;
  display: block;
}

.nav-item li a{
  font-size: 1.5em !important;
  margin-right: 15px;
  color: #c3c4c6 !important;
  opacity: 0.5 !important;
}

.move-me {
  margin-top: 35px !important;
}

.com{
  margin-top: 20px !important;
}

